syntax = "proto3";

package inventory.v1;

import "google/protobuf/timestamp.proto";
//import "google/protobuf/wrappers.proto";
//import "google/protobuf/empty.proto"

option go_package = "github.com/DeDevir/go_homework/shared/pkg/proto/inventory/v1;inventory_v1";

service InventoryService {
  rpc GetPart(GetPartRequest) returns (GetPartResponse);

  rpc ListParts(ListPartsRequest) returns (ListPartsResponse);
}

// Part представляет запчасть с ее основной информацией и метаданными
message Part {
    string uuid = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int64 stock_quantity = 5;
    Category category = 6;
    Dimensions dimensions = 7;
    Manufacturer manufacturer = 8;
    repeated string tags = 9;
    map<string, Value> metadata = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}

// PartsFilter используется для фильтрации запчастей при запросе списка
message PartsFilter {
    repeated string uuids = 1;
    repeated string names = 2;
    repeated Category categories = 3;
    repeated string manufacturer_countries = 4;
    repeated string tags = 5;
}

// Dimensions содержит размеры и вес запчасти
message Dimensions {
    double length = 1;
    double width = 2;
    double height = 3;
    double weight = 4;
}

// Manufacturer содержит информацию о производителе запчасти
message Manufacturer {
    string name = 1;
    string country = 2;
    string website = 3;
}

// Категории запчастей
enum Category {
    CATEGORY_UNKNOWN_UNSPECIFIED = 0;
    CATEGORY_ENGINE = 1;
    CATEGORY_FUEL = 2;
    CATEGORY_PORTHOLE = 3;
    CATEGORY_WING = 4;
}

// Запрос и ответ для получения запчасти по UUID
message GetPartRequest{
    string uuid = 1;
}

// Ответ содержит информацию о запчасти
message GetPartResponse{
    Part part = 1;
}

// Запрос для получения списка запчастей с фильтрацией
message ListPartsRequest{
    PartsFilter filter = 1;
}
// Ответ содержит список запчастей
message ListPartsResponse{
    repeated Part parts = 1;
}
// Значение метаданных запчасти, может быть строкой, числом или булевым значением
message Value {
    oneof value {
        string string_value = 1;
        int64 int64_value = 2;
        double double_value = 3;
        bool bool_value = 4;
    }
}