syntax = "proto3";
package payment.v1;

//import "google/protobuf/timestamp.proto";

option go_package = "github.com/DeDevir/go_homework/shared/pkg/proto/payment/v1;payment_v1";

service PaymentService {

  rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);

}

// Способы оплаты
enum PaymentMethod {
    PAYMENT_METHOD_UNKNOWN_UNSPECIFIED = 0;
    PAYMENT_METHOD_CARD = 1;
    PAYMENT_METHOD_SBP = 2;
    PAYMENT_METHOD_CREDIT_CARD = 3;
    PAYMENT_METHOD_INVESTOR_MONEY = 4;
}

// PayOrderRequest запрос на оплату заказа
message PayOrderRequest{
    string order_uuid = 1;
    string user_uuid = 2;
    PaymentMethod payment_method = 3;
}

// PayOrderResponse ответ на запрос оплаты заказа
message PayOrderResponse{
    string transaction_uuid = 1;
}